spinnaker-sample-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spinnaker-sample-deploy
  name: spinnaker-sample-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spinnaker-sample-deploy
  strategy: {}
  template:
    metadata:
      labels:
        app: spinnaker-sample-deploy
    spec:
      containers:
      - image: harbor.misoboy.kr/private-dev-misoboy/${parameters.imageTag}
        name: spinnaker-sample-app
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
      imagePullSecrets:
      - name: harbor-misoboy-registry
