spinnaker-sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-backend-api-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    sample: sample-backend-api
