spinnaker-sample-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-backend-api-vs
  namespace: default
spec:
  gateways:
    - default/default-gw
  hosts:
    - dev.misoboy.kr
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: sample-backend-api-service
            port:
              number: 8080
